--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
 
         <div class="contact">
-            <p>Contact: theamazingtimetraveler@gmail.com</p>
+            <p>Contact: almazzo@gmail.com</p>
         </div>
     </div>
 </body>
