--- a/terms.html
+++ b/terms.html
@@ -127,7 +127,7 @@
 
         <div class="contact">
             <h2>13. Contact</h2>
-            <p>For questions about these Terms, contact: <a href="mailto:theamazingtimetraveler@gmail.com">theamazingtimetraveler@gmail.com</a></p>
+            <p>For questions about these Terms, contact: <a href="mailto:almazzo@gmail.com">almazzo@gmail.com</a></p>
         </div>
     </div>
 </body>
