--- a/privacy.html
+++ b/privacy.html
@@ -184,7 +184,7 @@
         <div class="contact">
             <h2>12. Contact Us</h2>
             <p>For questions about this Privacy Policy or our data practices, contact:</p>
-            <p><strong>Email:</strong> <a href="mailto:theamazingtimetraveler@gmail.com">theamazingtimetraveler@gmail.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:almazzo@gmail.com">almazzo@gmail.com</a></p>
         </div>
     </div>
 </body>
